--- a/src/app.css
+++ b/src/app.css
@@ -5,6 +5,24 @@
 @theme {
 	--font-sans-en: Helvetica, Arial, sans-serif;
 	--font-sans-zh: Noto Sans SC, Helvetica, Arial, sans-serif;
+
+	--color-brand-gray-50: #f3f3f3;
+	--color-brand-gray-100: #c6c6c6;
+	--color-brand-black: #000000;
+	--color-brand-white: #ffffff;
+	--color-brand-grayblue: #c3c8d1;
+	--color-brand-blue: #7f9dd8;
+	--color-brand-green-100: #c3d1c4;
+	--color-brand-green-200: #afd7d5;
+	--color-brand-teal: #5da9c3;
+	--color-brand-gold: #eab160;
+	--color-brand-yellow: #fff200;
+	--color-brand-purple: #9773b0;
+	--color-brand-cream: #ecebd9;
+}
+
+html {
+	text-rendering: geometricPrecision;
 }
 
 :root:lang(en) body,
