--- a/src/app.css
+++ b/src/app.css
@@ -57,6 +57,10 @@ html {
 	font-family: var(--font-sans-zh);
 }
 
+.card img {
+	mix-blend-mode: lighten;
+}
+
 img:not(.dither) {
 	filter: grayscale(100%);
 }
