--- a/src/app.css
+++ b/src/app.css
@@ -57,9 +57,9 @@ html {
 	font-family: var(--font-sans-zh);
 }
 
-.card img.dither {
+.card img {
 	mix-blend-mode: lighten;
-}p
+}
 
 img:not(.dither) {
 	filter: grayscale(100%);
