--- a/src/app.css
+++ b/src/app.css
@@ -1,10 +1,15 @@
 @import 'tailwindcss';
+@import '@ibm/plex-sans/css/ibm-plex-sans-all.min.css';
+@import '@ibm/plex-sans-sc/css/ibm-plex-sans-sc-all.min.css';
+@import '@ibm/plex-sans-tc/css/ibm-plex-sans-tc-all.min.css';
+
 @plugin '@tailwindcss/forms';
 @plugin '@tailwindcss/typography';
 
 @theme {
-	--font-sans-en: Helvetica, Arial, sans-serif;
-	--font-sans-zh: Noto Sans SC, Helvetica, Arial, sans-serif;
+	--font-sans: 'IBM Plex Sans', 'Helvetica Neue', Helvetica, Arial, system-ui, sans-serif;
+
+	--font-sans-zh: 'IBM Plex Sans', 'IBM Plex Sans SC', 'IBM Plex Sans TC', system-ui, sans-serif;
 
 	--color-brand-gray-50: #f3f3f3;
 	--color-brand-gray-100: #c6c6c6;
@@ -21,13 +26,30 @@
 	--color-brand-yellow: #fff200;
 }
 
+:root {
+	font-family: var(--font-sans);
+	--lh-tight: 1.1;
+}
 html {
 	text-rendering: geometricPrecision;
 }
 
-.object {
-	background-color: var(--color-black);
+:lang(zh) {
+	--lh-tight: 1.4;
+	--font-sans: var(--font-sans-zh);
 }
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+	font-weight: 400;
+}
+
+.object {
+	background-color: var(--color-brand-black);
+} 
 
 .default {
 	background-color: var(--color-brand-gray-50);
@@ -36,7 +58,7 @@ html {
 .creator,
 .person {
 	background-color: var(--color-brand-blue);
-	color: var(--color-black);
+	color: var(--color-brand-black);
 }
 
 .theme,
@@ -56,61 +78,12 @@ html {
 .card.object:hover {
 	background-color: var(--color-brand-gray-100);
 }
-:root {
-	--lh-tight: 1.1;
-}
-
-:root:lang(zh) {
-	--lh-tight: 1.4;
-}
-
-:root:lang(en) body,
-.en {
-	font-family: var(--font-sans-en);
-}
-
-:root:lang(zh) body,
-.zh {
-	font-family: var(--font-sans-zh);
-}
 
 .card img {
 	mix-blend-mode: lighten;
 }
 
-/* img:not(.dither) {
-	filter: grayscale(100%);
-} */
-
 ::selection {
 	background-color: var(--color-brand-yellow);
-	color: var(--color-black);
-}
-
-@font-face {
-	font-family: 'Noto Sans SC';
-	font-style: normal;
-	font-weight: 100;
-	src: url('/fonts/noto-sans-sc-chinese-simplified-100-normal.ttf') format('truetype');
-}
-
-@font-face {
-	font-family: 'Noto Sans SC';
-	font-style: normal;
-	font-weight: 400;
-	src: url('/fonts/noto-sans-sc-chinese-simplified-400-normal.ttf') format('truetype');
-}
-
-@font-face {
-	font-family: 'Noto Sans SC';
-	font-style: normal;
-	font-weight: 600;
-	src: url('/fonts/noto-sans-sc-chinese-simplified-600-normal.ttf') format('truetype');
-}
-
-@font-face {
-	font-family: 'Noto Sans SC';
-	font-style: normal;
-	font-weight: 800;
-	src: url('/fonts/noto-sans-sc-chinese-simplified-800-normal.ttf') format('truetype');
+	color: var(--color-brand-black);
 }
