--- a/src/app.css
+++ b/src/app.css
@@ -24,17 +24,25 @@
 	--color-brand-cream: #ecebd9;
 	--color-brand-yellow: #fff200;
 
-	--color-type-creator: #b875d3;
+	/* --color-type-creator: #6e95d2;
+	--color-type-default: #9ab2d9;
 
-	--color-type-default: #575572;
+	--color-type-object: #c48c72;
+	--color-type-object-book: #d27a90;
+	--color-type-object-video: #e58c6c;
+	--color-type-object-periodical: #b178c2;
+	--color-type-object-newsletter: #d59676; */
 
-	--color-type-object: #5f58b4;
+	--color-type-creator: #7d8fa8;
+	--color-type-default: #9cacc2;
 
-	--color-type-object-book: #3f86d1;
-	--color-type-object-video: #47bfcd;
-	--color-type-object-periodical: #35b195;
-	--color-type-object-newsletter: #9a2987;
-	--color-type-object-article: var(--color-type-object);
+	--color-type-object: #a07ec2;
+	--color-type-object-book: #6cbf9c;
+	--color-type-object-video: #e28a5c;
+	--color-type-object-periodical: #9b6fd4;
+	--color-type-object-newsletter: #c3a85e;
+	--color-type-object-article: #b07ab0;
+
 	--color-type-object-official: var(--color-type-object);
 	--color-type-object-other: var(--color-type-object);
 
