--- a/src/app.css
+++ b/src/app.css
@@ -78,6 +78,10 @@ h5 {
 	font-weight: 400;
 }
 
+strong, b {
+	font-weight: 500;
+}
+
 ::selection {
 	background-color: var(--color-brand-yellow);
 	color: var(--color-brand-black);
